Introduced rollOverAndUpdate fixing the bug of multiple active records