@@ -24,10 +24,7 @@ import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
 import co.elastic.clients.elasticsearch._types.query_dsl.MatchAllQuery;
 import co.elastic.clients.elasticsearch._types.query_dsl.TermQuery;
 import co.elastic.clients.elasticsearch._types.query_dsl.TermsQuery;
-import co.elastic.clients.elasticsearch.core.GetRequest;
-import co.elastic.clients.elasticsearch.core.IndexRequest;
-import co.elastic.clients.elasticsearch.core.SearchRequest;
-import co.elastic.clients.elasticsearch.core.UpdateRequest;
+import co.elastic.clients.elasticsearch.core.*;
 import co.elastic.clients.elasticsearch.core.search.Hit;
 import co.elastic.clients.elasticsearch.indices.CreateIndexRequest;
 import co.elastic.clients.elasticsearch.indices.ExistsRequest;
@@ -113,6 +110,36 @@ public class ElasticRepository extends AbstractSchemaRepository {
 
     @Override
     @SneakyThrows
+    public void rollOverAndUpdate(SchemaDetails schema) {
+        final var searchQuery = BoolQuery.of(t -> t.must(List.of(
+                TermQuery.of(p -> p.field(NAMESPACE).value(schema.getNamespace()))._toQuery(),
+                TermQuery.of(q -> q.field(SCHEMA_NAME).value(schema.getSchemaName()))._toQuery(),
+                TermQuery.of(q -> q.field(SCHEMA_STATE).value(SchemaState.APPROVED.name()))._toQuery()
+        )))._toQuery();
+        final var storedResults = client.search(SearchRequest.of(
+                        s -> s.query(searchQuery)
+                                .requestCache(true)
+                                .index(List.of(SCHEMA_INDEX))
+                                .size(elasticConfig.getMaxResultSize()) //If you have more than 10K schemas, this will hold you up!
+                                .timeout(elasticConfig.getTimeout())),
+                SchemaDetails.class
+        );
+        final var newSchemas = storedResults.hits().hits().stream()
+                .map(Hit::source).collect(Collectors.toList());
+        newSchemas.stream().filter(each -> !each.getReferenceId().equalsIgnoreCase(schema.getReferenceId()))
+                .forEach(each -> each.setSchemaState(SchemaState.ROLLED));
+        newSchemas.add(schema);
+        final var br = new BulkRequest.Builder()
+                .index(SCHEMA_INDEX)
+                .refresh(Refresh.WaitFor)
+                .timeout(Time.of(s -> s.time(elasticConfig.getTimeout())));
+        newSchemas.forEach(eachSchema -> br.operations(op ->
+                op.update(idx -> idx.index(SCHEMA_INDEX).id(eachSchema.getReferenceId()).action(a -> a.doc(eachSchema)))));
+        client.bulk(br.build());
+    }
+
+    @Override
+    @SneakyThrows
     public List<SchemaDetails> get(String namespace, String schemaName) {
         final var searchQuery = BoolQuery.of(t -> t.must(List.of(
                 TermQuery.of(p -> p.field(NAMESPACE).value(namespace))._toQuery(),
@@ -127,7 +154,7 @@ public class ElasticRepository extends AbstractSchemaRepository {
                 SchemaDetails.class
         );
         return searchResponse.hits().hits().stream()
-                .map(Hit::source).collect(Collectors.toList());
+                .map(Hit::source).toList();
     }
 
     @Override
